[package]
name = "barco-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["sched", "signal", "resource"] }
